Fixed appteam icon stretch

--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ body {
 
 .appteam-logo img {
 	height: 60px;
+	width: 50px;
 }
 
 .fullOverlay {
